spinnaker-istio-api-demo.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: spinnaker-api-gateway
  namespace: mzmushko
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http-spinnaker-api
        protocol: HTTP
      hosts:
        - spin-api-demo.zullzorrander.com
      tls:
        httpsRedirect: true
    - port:
        number: 443
        name: https-spinnaker-api
        protocol: HTTPS
      hosts:
        - spin-api-demo.zullzorrander.com
      tls:
        mode: SIMPLE
        credentialName: zull-spin-api-demo-ssl
---
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: spinnaker-ui-dr
  namespace: mzmushko
spec:
  host: spin-gate
  trafficPolicy:
    tls: {}
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: spinnaker-ui-vs
  namespace: mzmushko
spec:
  hosts:
    - spin-api-demo.zullzorrander.com
  gateways:
    - spinnaker-api-gateway
  http:
    - route:
      - destination:
          host: spin-gate
          port:
            number: 8084
