spinnaker-istio-dr.yml
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: spinnaker-ui-dr
  namespace: mzmushko
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: >
      {"apiVersion":"networking.istio.io/v1alpha3","kind":"DestinationRule","metadata":{"annotations":{},"name":"spinnaker-ui-dr","namespace":"mzmushko"},"spec":{"host":"spin-deck","trafficPolicy":{"tls":{}}}}
  managedFields:
    - manager: kubectl-client-side-apply
      operation: Update
      apiVersion: networking.istio.io/v1alpha3
      time: '2022-03-23T16:40:43Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:annotations':
            .: {}
            'f:kubectl.kubernetes.io/last-applied-configuration': {}
        'f:spec':
          .: {}
          'f:host': {}
          'f:trafficPolicy':
            .: {}
            'f:tls': {}
spec:
  host: spin-deck
  trafficPolicy:
    tls: {}
status: {}
