spinnaker-istio-vs.yml
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: spinnaker-ui-vs
  namespace: mzmushko
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: >
      {"apiVersion":"networking.istio.io/v1alpha3","kind":"VirtualService","metadata":{"annotations":{},"name":"spinnaker-ui-vs","namespace":"mzmushko"},"spec":{"gateways":["spinnaker-ui-gateway"],"hosts":["mzm-sp-demo.azure-omnicloud.com"],"http":[{"route":[{"destination":{"host":"spin-deck","port":{"number":9000}}}]}]}}
  managedFields:
    - manager: kubectl-client-side-apply
      operation: Update
      apiVersion: networking.istio.io/v1alpha3
      time: '2022-03-23T16:40:44Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:annotations':
            .: {}
            'f:kubectl.kubernetes.io/last-applied-configuration': {}
        'f:spec':
          .: {}
          'f:gateways': {}
          'f:hosts': {}
          'f:http': {}
spec:
  hosts:
    - mzm-sp-demo.azure-omnicloud.com
  gateways:
    - spinnaker-ui-gateway
  http:
    - route:
        - destination:
            host: spin-deck
            port:
              number: 9000
status: {}
